[package]
name = "post-quantum-encryption"
version = "0.2.1"
edition = "2021"
authors = ["Travis L. Guckert <security@guckert.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GuckertDev/post-quantum-encryption"
homepage = "https://github.com/GuckertDev/post-quantum-encryption"
readme = "README.md"
keywords = ["post-quantum", "pqc", "ml-kem", "kyber", "encryption", "cryptography", "cli"]
categories = ["command-line-utilities", "cryptography"]
description = """
Flagship CLI for post-quantum file encryption using NIST ML-KEM-1024 hybrid scheme with HKDF-SHA256 and AES-256-GCM. Production-ready, audited, 95%+ test coverage.
"""

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
oqs = { git = "https://github.com/open-quantum-safe/liboqs-rust", branch = "main" }
oqs-sys = { git = "https://github.com/open-quantum-safe/liboqs-rust", branch = "main" }
anyhow = "1.0"
zeroize = "1.8"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
walkdir = "2.5"
colored = "2.1"
indicatif = "0.17"
rayon = "1.10"
argon2 = "0.5"
subtle = "2.6"
toml = "0.8"
dirs = "5.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
rpassword = "7.3"

[dev-dependencies]
criterion = "0.5"
arbitrary = "1"
libfuzzer-sys = "0.4"
tempfile = "3.12"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "pqe"
path = "src/main.rs"

[workspace]
members = ["."]

[package.metadata]
fuzz = { targets = ["decrypt"] }

[[bench]]
name = "encryption_benchmarks"
harness = false